--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {       
-	"author": "Nicholas Reid"
+	"author": "Nicholas Reid",
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
